--- a/HomeAmbalance/app/build.gradle
+++ b/HomeAmbalance/app/build.gradle
@@ -39,9 +39,16 @@ android {
             python.srcDir "src/main/python"
         }
     }
+    packagingOptions {
+        exclude 'META-INF/androidx.cardview_cardview.version'
+    }
+
 }
 
 dependencies {
+    //noinspection GradleCompatible
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.balysv:material-ripple:1.0.2'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
